--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-gesture-handler": "^1.5.2",
+    "react-native-reanimated": "^1.4.0",
+    "react-native-screens": "^2.0.0-alpha.22",
     "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.3",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5"
   },
